kubernetes/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nomen-celery-worker
  namespace: default
  labels:
    app: nomen-celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nomen-celery-worker
  template:
    metadata:
      labels:
        app: nomen-celery-worker
    spec:
      containers:
        - name: celery-worker
          image: lightcode01/nomen-api:latest
          command: ["celery", "-A", "app.workers.celery_app", "worker", "--loglevel=info"]
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
