kubernetes/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nomen-postgres
  namespace: default
spec:
  serviceName: nomen-postgres
  replicas: 1
  selector:
    matchLabels:
      app: nomen-postgres
  template:
    metadata:
      labels:
        app: nomen-postgres
    spec:
      containers:
        - name: postgres
          image: ankane/pgvector:v0.5.1
          ports:
            - containerPort: 5432
              name: dbport
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: nomen-postgres
  namespace: default
spec:
  ports:
    - port: 5432
  selector:
    app: nomen-postgres
  clusterIP: None
